<resources>
    <string name="app_name">CS3270A5 RJensen</string>
    <string name="title">Practice Making Change</string>
    <string name="lbl_change_to_make">Change to Make</string>
    <string name="lbl_change_total">Change total so far</string>
    <string name="lbl_time_remain">Time Remaining</string>
    <string name="lbl_correct_change">Correct Change Count</string>
    <string name="btn_restart">START OVER</string>
    <string name="btn_new_amount">NEW AMOUNT</string>
    <string name="btn_ok">OK</string>
    <string name="diag_win_title">You did it!</string>
    <string name="diag_win_body">You were able to make the correct change.</string>
    <string name="diag_time_title">You took too long.</string>
    <string name="diag_time_body">You should try again.</string>
    <string name="diag_wrong_title">That\'s too much change.</string>
    <string name="diag_wrong_body">Change is the little death, you should try again.</string>
    <string name="option_set_max_title">Set Change Max</string>
    <string name="option_set_max_label">Maximum Change Amount</string>
    <string name="option_zero_score_title">Zero Correct Count</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_alert_test">Show alert test</string>
    <string name="zero_dollars">$0.00</string>
    <string name="err_resultsfrag">Must Implement OnChangeResult</string>
    <string name="err_actionsfrag">Must Implement OnActionClicked</string>
    <string name="err_buttonsfrag">Must Implement OnButtonsFragment</string>
</resources>
