<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ChangeActionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_restart" />

            <Button
                android:id="@+id/btn_new_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_new_amount" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/lbl_correct_change" />
            <TextView android:id="@+id/tv_correct_change"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>